--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="h-row container">
       <div class="logo">ת</div>
       <div class="title">פתרון תשחץ • Skeleton</div>
-      <span class="badge">PWA v3</span>
+      <span class="badge">PWA v3.1</span>
       <div class="toolbar">
         <button id="installBtn" class="btn btn-primary" hidden>התקן כאפליקציה</button>
         <button id="clearBtn" class="btn btn-ghost">נקה</button>
@@ -24,13 +24,17 @@
     <div class="grid">
       <section class="card">
         <h2>טעינת תמונה</h2>
-        <p class="helper">גרסת v3: עדיין שלד, הוספנו ייצוא grid.json (דמו) כדי לבדוק את הזרימה עד ה-API.</p>
+        <p class="helper">v3.1: כפתור צילום וכפתור גלריה נפרדים (ב‑iOS, `capture` פותח מצלמה בלבד; כדי לטעון מהגלריה משתמשים בקלט ללא `capture`).</p>
         <div class="controls">
-          <label for="fileInput" class="btn btn-accent label-file">📷 העלאת תמונה</label>
-          <input id="fileInput" type="file" accept="image/*" capture="environment" />
+          <label for="fileInputCamera" class="btn btn-accent label-file">📷 צילום</label>
+          <input id="fileInputCamera" type="file" accept="image/*" capture="environment" />
+
+          <label for="fileInputGallery" class="btn btn-primary label-file">🖼️ גלריה</label>
+          <input id="fileInputGallery" type="file" accept="image/*" />
+
           <button id="fitBtn" class="btn">התאם לתצוגה</button>
           <button id="toggleOverlayBtn" class="btn">הצג/הסתר שכבה</button>
-          <button id="exportGridBtn" class="btn btn-primary">ייצא grid.json</button>
+          <button id="exportGridBtn" class="btn">ייצא grid.json</button>
         </div>
         <div class="canvas-wrap" id="canvasWrap">
           <canvas id="imageCanvas"></canvas>
@@ -45,9 +49,6 @@
           <button id="drawGridBtn" class="btn btn-primary">צייר גריד דמו</button>
           <button id="clearGridBtn" class="btn">מחק גריד</button>
         </div>
-        <ul class="helper">
-          <li>v3: כפתור ייצוא grid.json (דמו) להדמיית צינור ל-API.</li>
-        </ul>
       </aside>
     </div>
     <footer>
